--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -8,5 +8,12 @@ html {
   right: 0;
 }
 
-/* Write your solution here */
 
+/* Write your solution here */
+@media only screen and (max-width: 1196px) {
+
+  #ostrich {
+   top: -55px;
+  }
+
+}
